WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52811
Web Inspector: Crash when adding a rule for an ImageDocument
https://bugs.webkit.org/show_bug.cgi?id=52811
Summary
Web Inspector: Crash when adding a rule for an ImageDocument
Alexander Pavlov (apavlov)
Reported
2011-01-20 06:55:20 PST
1. Visit
http://www.google.nl/intl/en_com/images/srpr/logo1w.png
2. Open the Web Inspector 3. Click the <body> or <img> line 4. On the right, click the icon -> New style rule 5. Press 'enter' to match the suggested css selector ('body' or 'img') 6. Crash Upstreaming
http://code.google.com/p/chromium/issues/detail?id=69891
Attachments
[PATCH] Suggested fix
(2.13 KB, patch)
2011-01-20 07:12 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2011-01-20 07:12:57 PST
Created
attachment 79597
[details]
[PATCH] Suggested fix
WebKit Commit Bot
Comment 2
2011-01-20 07:46:36 PST
Comment on
attachment 79597
[details]
[PATCH] Suggested fix Clearing flags on attachment: 79597 Committed
r76245
: <
http://trac.webkit.org/changeset/76245
>
WebKit Commit Bot
Comment 3
2011-01-20 07:46:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug