2011-01-20  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Crash when adding a rule for an ImageDocument
        https://bugs.webkit.org/show_bug.cgi?id=52811

        * inspector/InspectorCSSAgent.cpp:
        (WebCore::InspectorCSSAgent::addRule2):
        (WebCore::InspectorCSSAgent::viaInspectorStyleSheet):

Canonical link: https://commits.webkit.org/66483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76245 268f45cc-cd09-0410-ab3c-d52691b4dbfc